--- a/CSS/About.css
+++ b/CSS/About.css
@@ -93,12 +93,6 @@ section p {
     line-height: 1.6;
 }
 
-ul {
-    list-style-type: none;
-    display: flex;
-    justify-content: center;
-    padding: 0;
-}
 
 ul li {
     margin: 15px;
@@ -146,3 +140,35 @@ ul li ul li {
         width: 100%;
     }
 }
+
+#skills-section {
+    padding: 20px;
+    background: #f1f3f5;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+/* Skills Header */
+#skills-section h2 {
+    color: #2b2d42;
+    font-size: 2.5em;
+    margin-bottom: 20px;
+}
+
+/* Skills List */
+#skills-section ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    gap: 20px;
+}
+
+
+
+
+
+
+
