--- a/CSS/About.css
+++ b/CSS/About.css
@@ -167,10 +167,11 @@ ul li ul li {
 }
 
 #skills-section ul li {
+    flex: 1 1 250px;
     max-width: 300px;
     min-width: 200px;
     background: #ffffff;
-    border: 1px solid #ef233c;
+    border: 1px solid #ab2f3d;
     border-radius: 8px;
     padding: 20px;
     box-sizing: border-box; 
@@ -179,4 +180,3 @@ ul li ul li {
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     overflow: hidden; 
 }
-
