--- a/CSS/Work.css
+++ b/CSS/Work.css
@@ -19,4 +19,33 @@ header {
     color: #2b2d42;
 }
 
+header h1 {
+    font-size: 2.8em;
+    font-weight: 600;
+    letter-spacing: 1.5px;
+    color: #2b2d42;
+}
+nav ul {
+    list-style-type: none;
+    padding: 10px;
+    text-align: center;
+}
 
+nav ul li {
+    display: inline;
+    margin: 0 15px;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: #2b2d42;
+    font-weight: 500;
+    font-size: 1.2em;
+    transition: color 0.3s ease;
+}
+
+nav ul li a:hover {
+    color: #ef233c;
+    border-bottom: 2px solid #ef233c;
+    padding-bottom: 3px;
+}
