--- a/CSS/Work.css
+++ b/CSS/Work.css
@@ -93,7 +93,9 @@ section img {
     width: 100%;
     height: auto;
     max-width: 300px;
-    border-radius: 10px;
+    padding: 5px;
+    margin: 10px 0;
+    border-radius: 8px;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
