--- a/CSS/Contact.css
+++ b/CSS/Contact.css
@@ -52,6 +52,17 @@ nav ul li a:hover {
     padding-bottom: 3px;
 }
 
+ol li a {
+    padding: 5px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+ol li a:hover {
+    background-color: #f1f4f8;
+    color: #ef233c;
+}
+
 /* Section styles */
 section {
     margin-top: 30px;
