--- a/CSS/Contact.css
+++ b/CSS/Contact.css
@@ -52,25 +52,6 @@ nav ul li a:hover {
     padding-bottom: 3px;
 }
 
-ul li a {
-    padding: 5px;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-}
-
-ul li a:hover {
-    background-color: #f1f4f8;
-    color: #c209eb;
-}
-
-ul li {
-    transition: transform 0.2s ease, color 0.3s ease;
-}
-
-ul li:hover {
-    transform: translateX(10px);
-    color: #ef233c;
-}
 
 /* Section styles */
 section {
@@ -97,39 +78,34 @@ section p {
     margin: 0 auto 30px auto;
 }
 
-ul {
+ol {
     margin: 15px;
 }
 
-ul li {
+ol li {
     margin-bottom: 15px;
     font-size: 1.1em;
 }
 
-ul li {
-    font-size: 1.1em;
-    color: #2b2d42;
-    padding: 10px;
-    margin: 15px 0;
-    position: relative;
+ol li a {
+    padding: 5px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
 }
 
-ul li:before {
-    content: "✉️"; /* Default icon for Email */
-    position: absolute;
-    left: -30px;
+ol li a:hover {
+    background-color: #f1f4f8;
+    color: #c209eb;
+}
+
+ol li {
+    transition: transform 0.2s ease, color 0.3s ease;
+}
+
+ol li:hover {
+    transform: translateX(10px);
     color: #ef233c;
-    font-size: 1.3em;
 }
-
-ul li:nth-child(2)::before {
-    content: "📸"; /* Icon for Instagram */
-}
-
-ul li:nth-child(3)::before {
-    content: "💻"; /* Icon for GitHub */
-}
-
 /* Image styling */
 section img {
     width: 300px;
