--- a/CSS/About.css
+++ b/CSS/About.css
@@ -59,7 +59,11 @@ section {
     margin: auto;
     text-align: left;
 }
-
+img:hover {
+    transform: scale(1.05); 
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2); 
+    transition: transform 0.3s ease, box-shadow 0.3s ease; 
+}
 section img {
     width: 100%;
     max-width: 300px;
