--- a/CSS/Home.css
+++ b/CSS/Home.css
@@ -62,6 +62,10 @@ p {
     line-height: 1.6;
 }
 
+.morning { color: #333; background-color: #FFFAE3; }
+.afternoon { color: #444; background-color: #FFEDD5; }
+.evening { color: #FFF; background-color: #582a2a; }
+
 
 @media (max-width: 768px) {
     header h1 {
